Bugzilla bug 195219: implemented the atomic routines in IA-64 assembly for HP-UX IPF.  Thanks to Dennis Handly of HP for reviewing the assembly code and suggesting the use of the addp4 instruction to convert a 32-bit address to a 64-bit one in 32-bit builds. Modified files: configure configure.in _hpux.h Added file: os_HPUX_ia64.s